--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # https://pub.dev/packages/flutter_screenutil
+  flutter_screenutil: ^5.7.0
   provider: ^6.0.5
   google_fonts: ^4.0.4
   dio: ^5.1.1
