--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   #https://pub.dev/packages/flutter_svg
   flutter_svg: ^2.0.5
   #https://pub.dev/packages/light/example
-  light: ^2.1.0
+#  light: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +75,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - assets/images/
-    - assets/lotties/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
