--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,8 +73,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - assets/images/
-    - assets/lotties/
+    # - assets/images/
+    # - assets/lotties/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
